--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,9 @@ android {
 }
 
 dependencies {
-
+    implementation('com.squareup.okhttp3:okhttp:4.11.0')
+    implementation('com.google.code.gson:gson:2.10.1')
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
