added libs glide, cardview, paging #5

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
 }
 
 dependencies {
+    implementation group: 'com.github.bumptech.glide', name: 'glide', version: '4.15.1'
+    implementation("androidx.cardview:cardview:1.0.0")
+
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     implementation('com.squareup.okhttp3:okhttp:4.11.0')
     implementation('com.google.code.gson:gson:2.10.1')
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
