--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
 
     <application
+            android:name=".RedditPeakApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher_photo"
             android:label="@string/app_name"
